--- a/ELK/src/app/components/filters/filters.component.html
+++ b/ELK/src/app/components/filters/filters.component.html
@@ -16,9 +16,10 @@
   </div>
   <div class="col-md-3">
     <div class="dropdown">
-      <a (click)="addNameSort()" class="dropdown-toggle" href="#" role="button" id="nameSort" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <a  class="dropdown-toggle" href="#" role="button" id="nameSort" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Наименование
       </a>
+      <a (click)="addNameSort()" href="#">AAAAAAAAAA</a>
     </div>
   </div>
   <div class="col-md-2">
@@ -29,7 +30,7 @@
       <div (click)="stopPropagation($event)" id="dateDropdown" class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <label (click)="addDateSort($event.target)" for="newToOld"><a class="dropdown-item"><input name="date" type="radio" id="newToOld">От новых к старым</a></label>
         <label (click)="addDateSort($event.target)" for="oldToNew"><a class="dropdown-item"><input name="date" type="radio" id="oldToNew">От старых к новым</a></label>
-        <label for="dateFilter"><a class="dropdown-item"><input name="date" type="radio" id="dateFilter">За период времени
+        <label (click)="checkRadio($event)" for="dateFilter"><a class="dropdown-item"><input name="date" type="radio" id="dateFilter">За период времени
           <input (input)="validateDate($event)" id="startDate" type="text" name="date" class="tcal form-control" value="" placeholder="Начало периода"/>
           <div class="invalid-feedback" style="visibility: hidden"></div>
           <br>
