--- a/ELK/src/app/components/filters/filters.component.html
+++ b/ELK/src/app/components/filters/filters.component.html
@@ -30,13 +30,16 @@
       <div (click)="stopPropagation($event)" id="dateDropdown" class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <label (click)="addDateSort($event.target)" for="newToOld"><a class="dropdown-item"><input name="date" type="radio" id="newToOld">От новых к старым</a></label>
         <label (click)="addDateSort($event.target)" for="oldToNew"><a class="dropdown-item"><input name="date" type="radio" id="oldToNew">От старых к новым</a></label>
-        <label (click)="checkRadio($event)" for="dateFilter"><a class="dropdown-item"><input name="date" type="radio" id="dateFilter">За период времени
-          <input (input)="validateDate($event)" id="startDate" type="text" name="date" class="tcal form-control" value="" placeholder="Начало периода"/>
-          <div class="invalid-feedback" style="visibility: hidden"></div>
-          <br>
-          <input (input)="validateDate($event)" id="endDate" type="text" name="date" class="tcal form-control" value="" placeholder="Конец периода"/>
-          <div class="invalid-feedback" style="visibility: hidden">Дата в формате дд.мм.ггг</div>
-        </a></label>
+        <label (click)="enableInput()" for="dateFilter">
+          <a class="dropdown-item">
+            <input name="date" type="radio" id="dateFilter">За период времени
+            <input (input)="validateDate($event)" id="startDate" type="text" name="date" class="tcal form-control" value="" placeholder="Начало периода" disabled/>
+            <div class="invalid-feedback" style="visibility: hidden"></div>
+            <br>
+            <input (input)="validateDate($event)" id="endDate" type="text" name="date" class="tcal form-control" value="" placeholder="Конец периода" disabled/>
+            <div class="invalid-feedback" style="visibility: hidden">Дата в формате дд.мм.ггг</div>
+          </a>
+        </label>
       </div>
     </div>
   </div>
@@ -45,8 +48,8 @@
       <a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Важность
       </a>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item" href="#">Только важные</a>
+      <div (click)="stopPropagation($event)" class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item"><input (change)="addToFlags($event.target)" name="importance" type="checkbox" id="importance"><label for="importance">Только важные</label></a>
       </div>
     </div>
   </div>
