--- a/ELK/src/styles.css
+++ b/ELK/src/styles.css
@@ -7,6 +7,12 @@
   height: 60px;
 }
 
+.column-title {
+  cursor: pointer;
+  color: black;
+  font-weight: bold;
+}
+
 .dropdown-top {
   width: 94px;
   height: 24px;
@@ -19,4 +25,45 @@
   letter-spacing: normal;
   text-align: center;
   color: var(--white);
+}
+
+.notifread{
+  font-weight: bold;
+}
+
+.notif-checkbox{
+  margin-right: 10px;
+}
+
+.notif-action-group{
+  -webkit-box-shadow: 0px 4px 10px -1px #d9d9d9;
+  -moz-box-shadow: 0px 4px 10px -1px #d9d9d9;
+  box-shadow: 0px 4px 10px -1px #d9d9d9;
+}
+
+.notif-action {
+  display: block;
+  width: 100%;
+  height: 56px;
+  padding: .25rem 1.5rem;
+  clear: both;
+  color: #212529;
+  text-align: inherit;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
+}
+
+.notif-action:focus,.notif-action:hover {
+  color: #16181b;
+  text-decoration: none;
+  background-color: #f8f9fa;
+  outline: none;
+}
+
+.notif-action:active {
+  color: #fff;
+  text-decoration: none;
+  background-color: #1d5cd7;
+  outline: none;
 }
