--- a/ELK/src/styles.css
+++ b/ELK/src/styles.css
@@ -1,6 +1,7 @@
 .header {
   height: 60px;
   background-color: #003399;
+  width: 100%;
 }
 
 .nav-height {
@@ -11,6 +12,11 @@
   cursor: pointer;
   color: black;
   font-weight: bold;
+}
+
+.quantity{
+  font-size: small;
+  color: #747474;
 }
 
 .dropdown-top {
@@ -67,3 +73,25 @@
   background-color: #1d5cd7;
   outline: none;
 }
+
+.show-more {
+  cursor: pointer;
+  background-color: #1d5cd7;
+  display: block;
+  width: 100%;
+  height: 56px;
+  padding: .25rem 1.5rem;
+  clear: both;
+  color: #fff;
+  white-space: nowrap;
+  border: 0;
+  margin: 1rem 0px;
+}
+
+.show-more:active {
+  color: #f8f9fa;
+  text-decoration: none;
+  background-color: #003399;
+  outline: none;
+}
+
