--- a/ELK/src/app/components/notifications/notifications.component.html
+++ b/ELK/src/app/components/notifications/notifications.component.html
@@ -4,7 +4,7 @@
   <button (click)="markAs($event.target.id)" class="notif-action" id="as-read">Отметить как прочитанное</button>
   <button (click)="markAs($event.target.id)" class="notif-action" id="as-important">Отметить как важное</button>
 </div>
-<div *ngFor="let notification of notificationsView" class="row py-4 border-bottom">
+<div *ngFor="let notification of notificationsView" class="row py-4 border-bottom notification">
   <div class="col-md-3">
     <input (change)="setChecked(notification)" type="checkbox" [checked]="notification.checked" class="notif-checkbox">
     <span id="notif-type">{{notification.typeRu}}</span>
