--- a/ELK/src/styles.css
+++ b/ELK/src/styles.css
@@ -33,6 +33,10 @@
   color: var(--white);
 }
 
+.notification:hover {
+  background-color: #e8ecf4;
+}
+
 .notifread{
   font-weight: bold;
 }
@@ -93,5 +97,16 @@
   text-decoration: none;
   background-color: #003399;
   outline: none;
+}
+
+.top-notif div{
+  z-index: 1000;
+  background-color: #fff;
+  font-size: small;
+  max-width: 300px;
+
+  -webkit-box-shadow: 0px 4px 10px -1px #d9d9d9;
+  -moz-box-shadow: 0px 4px 10px -1px #d9d9d9;
+  box-shadow: 0px 4px 10px -1px #d9d9d9;
 }
 
