Устранены ошибки отображения при выделении уведомлений Добавлена обработка случаев пустых списков уведомлений/результатов фильтрации

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
     <div class="row  px-4">
     <div class="col-md-7">
       <app-filters (flagsOut)="setFlags($event)"></app-filters>
-      <app-notifications (notificationsOut)="setNotifQuantity($event)" [flags]="flags"></app-notifications>
+      <app-notifications (notificationsOut)="setNotifications($event)" [flags]="flags"></app-notifications>
       <div class="row">
         <div class="col-md-12">
         </div>
