--- a/src/app/components/notifications-top/notifications-top.component.html
+++ b/src/app/components/notifications-top/notifications-top.component.html
@@ -1,4 +1,4 @@
-<div class="" >
+<div>
       <span *ngFor="let notification of notifications"
             class="py-4 border-bottom notification dropdown-item"
             [ngClass]="{notifread: !notification.read}"
