--- a/src/styles.css
+++ b/src/styles.css
@@ -52,6 +52,7 @@
 }
 
 .notif-action {
+  cursor: pointer;
   display: block;
   width: 100%;
   height: 56px;
@@ -108,5 +109,12 @@
   -webkit-box-shadow: 0px 4px 10px -1px #d9d9d9;
   -moz-box-shadow: 0px 4px 10px -1px #d9d9d9;
   box-shadow: 0px 4px 10px -1px #d9d9d9;
+}
+
+.icon {
+  background: url("/assets/bell.png") 100% 50% no-repeat;
+  background-size: contain;
+  height: 25px;
+  width: 25px;
 }
 
