Добавлен обработчик кликов для верхнего списка уведомлений

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,10 +30,8 @@
     </div>
     <div class="col-md-1">
     </div>
-    <div  class="col-md-1 dropdown">
-      <span class="dropdown-toggle icon"  id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      </span>
-      <app-notifications-top class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton" [notificationsIn]="notifications">!</app-notifications-top>
+    <div  class="col-md-1">
+      <app-notifications-top [notificationsIn]="notifications"></app-notifications-top>
     </div>
     <div class="col-md-2">
     </div>
