--- a/src/app/components/notifications/notifications.component.html
+++ b/src/app/components/notifications/notifications.component.html
@@ -22,6 +22,6 @@
     <span id="notif-text">{{notification.text}}</span>
   </div>
 </div>
-<button *ngIf="start < notificationsFiltered.length" class="show-more" (click)="appendNotifs()">Показать еще</button>
+<button *ngIf="start < notificationsFiltered.length" class="show-more" (click)="appendNotifs(10)">Показать еще</button>
 <span *ngIf="emptyResult" class="alert alert-dark">Отсутствуют уведомления, удовлетворяющие условиям поиска</span>
 
