--- a/src/app/components/notifications-top/notifications-top.component.css
+++ b/src/app/components/notifications-top/notifications-top.component.css
@@ -1,13 +1,8 @@
-.dropdown-item {
-  white-space: normal !important;
-  min-width:400px;
-}
-
 .icon {
   display: block;
   cursor: pointer;
   border: 0;
-  background: url("//assets/bell.png") 50% 50% no-repeat;
+  background: url("/assets/bell.png") 50% 50% no-repeat;
   background-size: contain;
   height: 100%;
   width: 100%;
@@ -18,10 +13,29 @@
   z-index: 1000;
   top: 60px !important;
   background-color: #fff;
-  font-size: small;
-  max-width: 400px;
-  -webkit-box-shadow: 0px 4px 10px -1px #d9d9d9;
-  -moz-box-shadow: 0px 4px 10px -1px #d9d9d9;
-  box-shadow: 0px 4px 10px -1px #d9d9d9;
+  -webkit-box-shadow: 0px 4px 15px -1px #d9d9d9;
+  -moz-box-shadow: 0px 4px 15px -1px #d9d9d9;
+  box-shadow: 0px 4px 15px -1px #d9d9d9;
   position: absolute;
+  right: 0;
+  width:456px;
+}
+
+.top-notification {
+  display: block;
+  white-space: normal !important;
+  padding: .8rem .8rem;
+}
+
+.top-notification span {
+  display: inline-block;
+}
+
+.badge {
+  right: 35px;
+  top: 10px;
+  color: #fff;
+  position: absolute;
+  border-radius: 1.25rem;
+  background-color: #f36c2b;
 }
