--- a/src/app/components/notifications-top/notifications-top.component.css
+++ b/src/app/components/notifications-top/notifications-top.component.css
@@ -1,24 +1,30 @@
 .icon {
+  margin: auto;
   display: block;
-  cursor: pointer;
   border: 0;
   background: url("/assets/bell.png") 50% 50% no-repeat;
   background-size: contain;
   height: 100%;
-  width: 100%;
+  width: 34px;
+}
+
+#show-top-notifs:hover, .show-top-notifs-hover {
+  background-color: #1d5cd7;
+}
+#show-top-notifs {
+  height: 100%;
+  width: 76px;
+  cursor: pointer;
 }
 
 .top-notif{
   display: none;
   z-index: 1000;
-  top: 60px !important;
   background-color: #fff;
-  -webkit-box-shadow: 0px 4px 15px -1px #d9d9d9;
-  -moz-box-shadow: 0px 4px 15px -1px #d9d9d9;
   box-shadow: 0px 4px 15px -1px #d9d9d9;
-  position: absolute;
-  right: 0;
-  width:456px;
+  position: relative;
+  width: 456px;
+  right: 380px;
 }
 
 .top-notification {
@@ -32,10 +38,10 @@
 }
 
 .badge {
-  right: 35px;
-  top: 10px;
+  right: -15px;
+  top: 11px;
   color: #fff;
-  position: absolute;
+  position: relative;
   border-radius: 1.25rem;
   background-color: #f36c2b;
 }
