--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -8,14 +8,30 @@
 <div class="row border-top border-bottom py-4">
   <div class="col-md-3 text-dark">
     <div class="dropdown">
-      <input (change)="addToFlags($event.target)" type="checkbox" id="check-all" class="notif-checkbox">
+      <label class="notif-checkbox">
+        <input
+          (change)="addToFlags($event.target)"
+          id="check-all"
+          class="checkbox notif-checkbox" type="checkbox">
+        <span class="checkbox-custom checkbox-custom-black notif-checkbox"></span>
+      </label>
       <span class="dropdown-toggle column-title" href="#" role="button" id="dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Тип сообщения
       </span>
       <div (click)="stopPropagation($event)" class="dropdown-menu" aria-labelledby="dropdown">
-        <a class="dropdown-item" href="#"><input type="checkbox" id="request" (change)="addToFlags($event.target)"><label for="request">Заявка</label></a>
-        <a class="dropdown-item" href="#"><input type="checkbox" id="approval" (change)="addToFlags($event.target)"><label for="approval">Согласование</label></a>
-        <a class="dropdown-item" href="#"><input type="checkbox" id="revision" (change)="addToFlags($event.target)"><label for="revision">На доработку</label></a>
+        <label for="request" class="dropdown-item">
+          <input type="checkbox" class="checkbox" id="request" (change)="addToFlags($event.target)">
+          <span class="checkbox-custom"></span>
+          Заявка
+        </label>
+        <label for="approval" class="dropdown-item">
+          <input type="checkbox" class="checkbox" id="approval" (change)="addToFlags($event.target)">
+          <span class="checkbox-custom"></span>
+          Согласование</label>
+        <label for="revision" class="dropdown-item">
+          <input type="checkbox" class="checkbox" id="revision" (change)="addToFlags($event.target)">
+          <span class="checkbox-custom"></span>
+          На доработку</label>
       </div>
     </div>
   </div>
@@ -32,15 +48,25 @@
         Дата
       </span>
       <div (click)="stopPropagation($event)" id="dateDropdown" class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <label (click)="addDateSort($event.target)" for="newToOld" class="dropdown-item"><input name="date" type="radio" id="newToOld">От новых к старым</label>
-        <label (click)="addDateSort($event.target)" for="oldToNew" class="dropdown-item"><input name="date" type="radio" id="oldToNew">От старых к новым</label>
+        <label (click)="addDateSort($event.target)" for="newToOld" class="dropdown-item">
+          <input class="radio" name="date" type="radio" id="newToOld">
+          <span class="radio-custom"></span>
+          От новых к старым
+        </label>
+        <label (click)="addDateSort($event.target)" for="oldToNew" class="dropdown-item">
+          <input class="radio" name="date" type="radio" id="oldToNew">
+          <span class="radio-custom"></span>
+          От старых к новым
+        </label>
         <label (click)="enableInput()" for="dateFilter" class="dropdown-item">
-            <input name="date" type="radio" id="dateFilter">За период времени
-            <input (input)="validateDate($event)" id="startDate" type="text" name="date" class="tcal form-control" value="" placeholder="Начало периода" disabled/>
-            <div class="invalid-feedback" style="visibility: hidden"></div>
-            <br>
-            <input (input)="validateDate($event)" id="endDate" type="text" name="date" class="tcal form-control" value="" placeholder="Конец периода" disabled/>
-            <div class="invalid-feedback" style="visibility: hidden">Дата в формате дд.мм.ггг</div>
+          <input class="radio" name="date" type="radio" id="dateFilter">
+          <span class="radio-custom"></span>
+          За период времени
+          <input (input)="validateDate($event)" id="startDate" type="text" name="date" class="tcal form-control" value="" placeholder="Начало периода" disabled/>
+          <div class="invalid-feedback" style="visibility: hidden"></div>
+          <br>
+          <input (input)="validateDate($event)" id="endDate" type="text" name="date" class="tcal form-control" value="" placeholder="Конец периода" disabled/>
+          <div class="invalid-feedback" style="visibility: hidden">Дата в формате дд.мм.ггг</div>
         </label>
       </div>
     </div>
@@ -51,7 +77,11 @@
         Важность
       </span>
       <div (click)="stopPropagation($event)" class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item"><input (change)="addToFlags($event.target)" name="importance" type="checkbox" id="importance"><label for="importance">Только важные</label></a>
+        <label for="importance" class="dropdown-item">
+          <input (change)="addToFlags($event.target)"  class="checkbox" name="importance" type="checkbox" id="importance">
+          <span class="checkbox-custom"></span>
+          Только важные
+        </label>
       </div>
     </div>
   </div>
