--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,80 +1,121 @@
-<div class="container-fluid">
-  <div class="row header">
-    <div class="col-md-2">
-      Logo
-    </div>
-    <div class="col-md-4 my-auto">
-      <nav class="navbar navbar-expand-lg">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link text-white" href="#">Поддержка<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Абитуриент
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-          </ul>
+<header>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-1 my-auto">
+        <div class="row">
+          <div class="col-6 logo"></div>
+          <div class="col-6 logo-title ">
+            Единый<br>Личный<br>Кабинет
+          </div>
         </div>
-      </nav>
-    </div>
-    <div class="col-md-2 my-auto">
-      <input class="form-control mr-sm-2 icon-search-white" type="search" placeholder="Поиск" aria-label="Search">
-    </div>
-    <div class="col-md-1">
-    </div>
-    <div  class="col-md-1">
-      <app-notifications-top
-        [notificationsIn]="notificationsTop"
-        (notificationsOutTop)="setNotifications($event)"
-        (removedNotification)="setRemovedNotification($event)"
-      ></app-notifications-top>
-    </div>
-    <div class="col-md-2">
-    </div>
-  </div>
-  <div class="row  px-4">
-    <div class="col-md-12 nav-height">
-      <ul class="nav">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Все <span class="small-text">{{length}}</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Задачи на исполнение</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Личные</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Другое</a>
-        </li>
-        <li class="nav-item ml-md-auto">
-          <a class="nav-link" href="#">Архив</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-    <div class="row  px-4">
-    <div class="col-md-8">
-      <app-filters (flagsOut)="setFlags($event)"></app-filters>
-      <app-notifications
-        (notificationsOut)="setNotificationsTop($event)"
-        [notificationsIn]="notifications"
-        [flags]="flags"
-        [removedNotification]="removedNotification"></app-notifications>
-      <div class="row">
-        <div class="col-md-12">
+      </div>
+      <div class="col-md-3 my-auto">
+        <nav class="navbar navbar-expand-lg">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link text-white" href="#">Поддержка<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Абитуриент
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <div class="col-md-3 my-auto">
+        <input class="form-control mr-sm-2 icon-search-white" type="search" placeholder="Поиск" aria-label="Search">
+      </div>
+      <div class="col-md-1 my-auto">
+        <div>
+          <span class="ru-language chosen-lang">RU</span>
+          <span class="en-language">EN</span>
+        </div>
+      </div>
+      <div  class="col-md-1">
+        <app-notifications-top
+          [notificationsIn]="notificationsTop"
+          (notificationsOutTop)="setNotifications($event)"
+          (removedNotification)="setRemovedNotification($event)"
+        ></app-notifications-top>
+      </div>
+      <div class="col-md-3 my-auto">
+        <div class="row">
+          <div class="col-md-2 p-0">
+            <span class="avatar"></span>
+          </div>
+          <a class="nav-link dropdown-toggle text-white col-md-10" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Мартин
+          </a>
+          <div class="dropdown-menu  my-auto" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
+  </div>
+</header>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 py-3">
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Все <span class="small-text">{{length}}</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Задачи на исполнение</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Личные</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Другое</a>
+          </li>
+          <li class="nav-item ml-md-auto">
+            <a class="nav-link" href="#">Архив</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+      <div class="row">
+      <div class="col-md-9">
+        <app-filters (flagsOut)="setFlags($event)"></app-filters>
+        <app-notifications
+          (notificationsOut)="setNotificationsTop($event)"
+          [notificationsIn]="notifications"
+          [flags]="flags"
+          [removedNotification]="removedNotification"></app-notifications>
+        <div class="row">
+          <div class="col-md-12">
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+      </div>
     </div>
   </div>
-</div>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2 my-auto">
+        <div class="row">
+          <div class="col-6 logo"></div>
+          <div class="col-6 logo-title ">
+            Единый<br>Личный<br>Кабинет
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+</footer>
