--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-md-6 nav-height">
-    <input (input)="addToFlags(($event.target))" id="search-filter" class="form-control mr-sm-2" type="search" placeholder="Поиск по уведомлениям" aria-label="Search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+  <div class="col-md-7 nav-height">
+    <input (input)="addToFlags(($event.target))" id="search-filter" class="form-control mr-sm-2 icon-search-black" type="search" placeholder="Поиск по уведомлениям" aria-label="Search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>
   </div>
   <div class="col-md-6">
   </div>
