--- a/src/app/components/notifications-top/notifications-top.component.css
+++ b/src/app/components/notifications-top/notifications-top.component.css
@@ -12,7 +12,7 @@
   background-color: #1d5cd7;
 }
 #show-top-notifs {
-  height: 100%;
+  height: 60px;
   width: 76px;
   cursor: pointer;
 }
@@ -22,9 +22,9 @@
   z-index: 1000;
   background-color: #fff;
   box-shadow: 0px 4px 15px -1px #d9d9d9;
-  position: relative;
+  position: absolute;
   width: 456px;
-  right: 380px;
+  /*right: 380px;*/
 }
 
 .top-notification {
