--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,33 @@
-.header {
-  height: 60px;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #282828;
+}
+
+header, footer {
+  width: 100%;
   background-color: #003399;
+  height: 60px;
+}
+
+footer {
+  bottom: 0;
+}
+
+.logo {
+  display: block;
+  cursor: pointer;
+  background-size: 23px;
+  background: url(assets/logo.png) 100% 50% no-repeat;
+  background-size: contain;
+  height: 37px;
+  margin: auto;
+}
+
+.logo-title {
+  color: #fff;
+  line-height: .9rem;
+  font-size: 12px;
+  cursor: pointer;
 }
 
 .nav-height {
